@@ -197,3 +197,5 @@ Fixes:
     * fix bug scroll works when PgDn, PgUp, Home, End key in entry is pressed in preedit state
     * clean up gnutls session initialization
     * fix bug not check data value when get deiconify message
+    * fix use of ecore_con_*_flush functions with unconnected objects
+    * fix setting of write flags on ecore-con servers during connect
