@@ -1,3 +1,8 @@
+2013-03-14  Mike Blumenkrantz
+
+        * fix use of ecore_con_*_flush functions with unconnected objects
+        * fix setting of write flags on ecore-con servers during connect
+
 2013-03-13  Cedric Bail
 
 	* Edje: use Eina_Cow to reduce memory usage.
